Fix overflow problem exclusive to production

--- a/wp-content/themes/freak/assets/less/main.less
+++ b/wp-content/themes/freak/assets/less/main.less
@@ -1789,6 +1789,10 @@ aside:nth-child(odd) {
   }
 }
 
+#primary {
+  overflow: auto;
+}
+
 /* --- Banner --- */
 .site-branding .title-font {
 	font-family: "Nexa Bold", sans-serif !important;
